@@ -134,16 +134,23 @@ namespace gui
 		virtual void setPosition(s32 x, s32 y) = 0;
 
 		//! Returns the current position of the mouse cursor.
-		/** \return Returns the current position of the cursor. The returned position
+		/** \param updateCursor When true ask system/OS for current cursor position. 
+			When false return the last known (buffered) position ( this is useful to 
+			check what has become of a setPosition call with float numbers).
+		\return Returns the current position of the cursor. The returned position
 		is the position of the mouse cursor in pixel units. */
-		virtual const core::position2d<s32>& getPosition() = 0;
+		virtual const core::position2d<s32>& getPosition(bool updateCursor=true) = 0;
 
 		//! Returns the current position of the mouse cursor.
-		/** \return Returns the current position of the cursor. The returned position
+		/** \param updateCursor When true ask system/OS for current cursor position. 
+			When false return the last known (buffered) position (this is 
+			useful to check what has become of a setPosition call with float numbers
+			and is often different from the values you passed in setPosition).
+		\return Returns the current position of the cursor. The returned position
 		is a value between (0.0f, 0.0f) and (1.0f, 1.0f), where (0.0f, 0.0f) is
 		the top left corner and (1.0f, 1.0f) is the bottom right corner of the
 		render window. */
-		virtual core::position2d<f32> getRelativePosition() = 0;
+		virtual core::position2d<f32> getRelativePosition(bool updateCursor=true) = 0;
 
 		//! Sets an absolute reference rect for setting and retrieving the cursor position.
 		/** If this rect is set, the cursor position is not being calculated relative to
